# Advent-of-Code

./: Cargo.toml  README.md
2023/libs/hello_world/: Cargo.toml
2023/libs/hello_world/src/: lib.rs
2023/libs/puzzle_2/src/: lib.rs  part2.rs  utils.rs
2023/libs/puzzle_3/src/: utils.rs
2023/libs/puzzle_4/: Cargo.toml
2023/libs/puzzle_4/src/: lib.rs  part1.rs
2023/libs/puzzle_5/: Cargo.toml
2023/libs/puzzle_5/src/: part1.rs  part2.rs
2024/: Cargo.toml
2024/cli/: Cargo.toml
2024/cli/src/: main.rs
2024/libs/common/: Cargo.toml
2024/libs/common/src/: lib.rs
2024/libs/hello_world/: Cargo.toml
2024/libs/puzzle_1/: Cargo.toml
2024/libs/puzzle_1/src/: lib.rs  part1.rs  part2.rs
2024/libs/puzzle_2/: Cargo.toml
2024/libs/puzzle_2/src/: part1.rs  part2.rs
2024/libs/puzzle_3/: Cargo.toml
2024/libs/puzzle_3/src/: lib.rs  parser.rs  part1.rs  part2.rs
cli/: Cargo.toml
cli/src/: main.rs
libs/common/: Cargo.toml
libs/common/src/: lib.rs
libs/hello_world/src/: lib.rs
libs/puzzle_1/: Cargo.toml
libs/puzzle_1/src/: lib.rs  part1.rs  part2.rs
libs/puzzle_2/: Cargo.toml
libs/puzzle_2/src/: lib.rs  part1.rs
libs/puzzle_3/: Cargo.toml
libs/puzzle_3/src/: lib.rs  part1.rs  part2.rs
libs/puzzle_4/: Cargo.toml
libs/puzzle_4/src/: lib.rs  part1.rs  part2.rs  utils.rs
libs/puzzle_5/: Cargo.toml
libs/puzzle_5/src/: lib.rs  part1.rs  utils.rs
