[package]
name = "common"

version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }